--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="hapes.png" alt="Richard hanrick" width="80" height="90">
+          <img src="hapes.png" alt="bala" width="80" height="90">
         </figure>
 
         <div class="info-content">
-          <h1 class="name" title="Richard hanrick">Balamurali</h1>
+          <h1 class="name" title="bala">Balamurali</h1>
 
           <p class="title">CyberSecurity Student</p>
         </div>
